syntax = "proto3";
package monitor.proto;

message GpuInfo
{
    string id = 10;
    string gpu_name = 1;
    int32 gpu_mem_total = 2;
    int32 gpu_mem_free = 3;
    int32 gpu_mem_used = 4;

    int32 gpu_mem_utilize = 5;
    int32 gpu_utilize = 6;
    int32 temperture = 7;
    int32 fan_speed = 8;
    int32 power_stat = 9;
}